--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                     <li><a href="#" class="lang">En</a></li>
                 </ul>
         <ul class="left">
-            <a href="#" class="login">تسجيل الدخول</a>
-            <a href="#" class="new">انشاء حساب</a>
+            <a href="login/login.html" class="login">تسجيل الدخول / انشاء حساب</a>
         </ul>
     </div>
     <i class="fa-solid fa-bars bars-icon"></i>
@@ -55,7 +54,7 @@
     <div class="step">
         <img src="images/money.jpg" alt="buy">
         <h4>البيع و الشراء</h4>
-        <p>يمكنك شراء كل ما هو مستعمل <br> او حتي مواد خام مثل الاخشاب وغيرها...</p>
+        <p>يمكنك شراء كل ما هو مستعمل او حتي مواد خام مثل الاخشاب وغيرها...</p>
     </div>
     <div class="step">
         <img src="images/fix.jpg" alt="fix">
