--- a/index.html
+++ b/index.html
@@ -12,24 +12,29 @@
 </head>
 <body>
     <!-- Start Nav -->
-    <nav>
+    <header>
         <div class="container">
-        <img src="images/logo1.png" alt="logo" class="logo"></li>
-        <div class="links">
-                <ul class="right">
-                    <li><a href="index.html" class="main">الرئيسية</a></li>
-                    <li><a href="#" class="products">عرض المنتجات</a></li>
-                    <li><a href="#" class="fix">خدمة التصليح</a></li>
-                    <li><a href="#" class="donate">التبرع</a></li>
-                    <li><a href="#" class="lang">En</a></li>
-                </ul>
-        <ul class="left">
-            <a href="login/login.html" class="login">تسجيل الدخول / انشاء حساب</a>
-        </ul>
-    </div>
-    <i class="fa-solid fa-bars bars-icon"></i>
-</div>
-    </nav>
+          <a href="#" class="logo">
+            <img src="images/logo1.png" alt="Logo" />
+          </a>
+          <nav>
+            <ul>
+              <li><a class="main" href="#">الرئيسية</a></li>
+              <li><a class="products" href="#">عرض المنتجات</a></li>
+              <li><a class="fix" href="#">خدمة التصليح</a></li>
+              <li><a class="donate" href="#">التبرع</a></li>
+              <li><a class="lang" href="#">En</a></li>  
+            <div class="log-btn">
+                <a class="login" href="login/login.html">انشاء حساب / تسجيل الدخول</a></li>
+            </div>
+            </ul>
+            <div class="icon">
+              <i class="fas fa-bars toggle-menu"></i>
+            </div>
+          </nav>
+        </div>
+      </header>
+
     <!-- End Nav -->
     <!-- Start Hero -->
     <div class="hero">
