--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="step">
         <img src="images/money.jpg" alt="buy">
         <h4>البيع و الشراء</h4>
-        <p>يمكنك شراء كل ما هو مستعمل او حتي مواد خام مثل الاخشاب وغيرها...</p>
+        <p>يمكنك شراء كل ما هو مستعمل <br> او حتي مواد خام مثل الاخشاب وغيرها...</p>
     </div>
     <div class="step">
         <img src="images/fix.jpg" alt="fix">
