--- a/buy&sell.html
+++ b/buy&sell.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Start Nav -->
-    <header style="position: relative;">
+    <header>
         <div class="container">
         <a href="index.html" class="logo">
             <img src="images/logo1.png" alt="Logo" />
