--- a/buy&sell.html
+++ b/buy&sell.html
@@ -14,26 +14,27 @@
     <!-- Start Nav -->
     <header>
         <div class="container">
-        <a href="index.html" class="logo">
+          <a href="index.html" class="logo">
             <img src="images/logo1.png" alt="Logo" />
-        </a>
-        <nav>
+          </a>
+          <nav>
             <ul>
-            <li><a class="main" href="index.html">الرئيسية</a></li>
-            <li><a class="products" href="#" style="background-color: var(--main-color); color: white;">عرض المنتجات</a></li>
-            <li><a class="fix" href="#">خدمة التصليح</a></li>
-            <li><a class="donate" href="#">التبرع</a></li>
-            <li><a class="lang" href="#">En</a></li>  
+              <li><a class="main" href="index.html">الرئيسية</a></li>
+              <li><a class="products" href="buy&sell.html" style="color: white; background-color: var(--main-color);">عرض المنتجات</a></li>
+              <li><a class="fix" href="#">خدمة التصليح</a></li>
+              <li><a class="donate" href="#">التبرع</a></li>
+              <li><a class="lang" href="#">En</a></li>  
             <div class="log-btn">
                 <a class="login" href="login/login.html">انشاء حساب / تسجيل الدخول</a></li>
             </div>
             </ul>
             <div class="icon">
-            <i class="fas fa-bars toggle-menu"></i>
+              <i class="fas fa-bars toggle-menu"></i>
             </div>
-        </nav>
+          </nav>
         </div>
-    </header>
+      </header>
+
     <!-- End Nav -->
     <div class="search-sec">
         <div class="container">
@@ -284,5 +285,6 @@
         </div>
     </div>
     <!-- End Footer -->
+    <script src="main.js"></script>
 </body>
 </html>
