--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h1>كل ما هو مستعمل موجود في ReTadweer!</h1>
             <p>بيع،اشتري، صلح، أو تبرع بمنتجاتك المستعملة وابدأ حياة جديدة لمنتجاتك</p>
             <a href="buy&sell.html">عرض المنتجات</a>
-            <a href="#">خدمة التصليح</a>
+            <a href="fix.html">خدمة التصليح</a>
         </div>
         <img src="images/landing.jpg" alt="recycling img">
     </div>
